--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-favicon": "^1.0.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
